<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C4B09D"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imagemDado"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/cafe" />

        <TextView
            android:id="@+id/txtViewTituloCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imagemDado"
            android:fontFamily="@font/poppins"
            android:text="Título"
            android:textColor="@color/marron_escuro"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewDescricaoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDelete"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@id/imagemDado"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="3"
            android:text="Descrição longa do item"
            android:textColor="@color/marron_escuro" />

        <TextView
            android:id="@+id/txtViewMsgOrigemCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtViewDescricaoCard"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imagemDado"
            android:text="@string/txtCardOrigem"
            android:textColor="@color/marron_escuro"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewOrigemCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtViewDescricaoCard"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txtViewMsgOrigemCard"
            android:text="Brasil"
            android:textColor="@color/marron_escuro"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnCompartilhar"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_below="@id/txtViewOrigemCard"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/marron_escuro"
            android:fontFamily="@font/roboto"
            android:text="@string/btnCompartilhar"
            android:textColor="@color/marron_claro"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@id/txtViewOrigemCard"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/btnCompartilhar"
            android:backgroundTint="@color/marron_escuro"
            android:fontFamily="@font/roboto"
            android:text="@string/btnEditar"
            android:textColor="@color/marron_claro"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="49dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_toStartOf="@id/btnCompartilhar"
            android:background="@color/marron_claro"
            app:srcCompat="@drawable/baseline_delete_24" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
